connect-flash was added

--- a/views/partials/_messages.hbs
+++ b/views/partials/_messages.hbs
@@ -7,9 +7,23 @@
   {{/each}}
 {{/if}}
 
-{{#if success}}
+{{#if success_msg}}
   <div class="message success">
-    <p>{{success}}</p>
+    <p>{{success_msg}}</p>
+    <button type="button" class="close">X</button>
+  </div>
+{{/if}}
+
+{{#if error_msg}}
+  <div class="message error">
+    <p>{{error_msg}}</p>
+    <button type="button" class="close">X</button>
+  </div>
+{{/if}}
+
+{{#if error}}
+  <div class="message error">
+    <p>{{error}}</p>
     <button type="button" class="close">X</button>
   </div>
 {{/if}}
