--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,5 @@
 <div class="dashboard-card">
   <h1>Dashboard</h1>
-  <p class="lead mb-3">Welcome {{user.name}}</p>
+  <p class="lead mb-3">Welcome {{name}}</p>
   <a href="/users/logout" class="btn logout-btn">Logout</a>
 </div>
